--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gsap": "^2.1.3",
     "next": "^8.1.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "styled-components": "^4.2.1"
   }
 }
